# rk-bfr

./: .gitignore  README.md  conda_environment.yml  cv.py  demo_results_analysis.ipynb  environment.yml  flr.py  launch.sh  requirements.txt  results_all.py  results_cv.py  run_utils.py  setup.cfg  simulation_utils.py
bfr/: _fpca_basis.py  _lda.py  _optimal_bayes.py  bayesian_model.py  cv.py  cv_lin.py  launch-ccc-rkhs.sh  launch.sh  mcmc_sampler.py  mle.py  plot_utils.py  preprocessing.py  simulation.py  utils.py
examples/: .conda_environment.yml  _fpca_basis.py  _fpls.py  _lda.py  _optimal_bayes.py  bayesian_model.py  cv.py  cv_lin.py  cv_lin_2.py  cv_log.py  mcmc_sampler.py  mle.py  mle_utils.py  plot_utils.py  preprocessing.py  pymc_utils.py  simulation.py  sklearn_utils.py  test-bfr-p-fixed.ipynb  test-bfr-p-free.ipynb  utils.py
experiments/: clf_emcee_sw_gp_brownian_kernel_l2_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_brownian_kernel_rkhs_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_fractional_brownian_kernel_l2_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_fractional_brownian_kernel_rkhs_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_ornstein_uhlenbeck_kernel_l2_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_ornstein_uhlenbeck_kernel_rkhs_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_squared_exponential_kernel_l2_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_gp_squared_exponential_kernel_rkhs_250_nw_64_ni_900_seed_2022.results.txt  clf_emcee_sw_growth_93_nw_64_ni_900_seed_2022.results.txt  (+20 more)
(+132 files in other folders)
