[metadata]
name = bfr-ANTCC
version = 0.0.1
author = Antonio Coín
author_email = antoniocoin07@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antcc/bayesian-functional-regression
project_urls =
    Bug Tracker = https://github.com/antcc/bayesian-functional-regression/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
