[metadata]
name = rk-bfr
version = 0.0.1
author = Antonio Coín
author_email = antonio.coin@uam.es
description = A package for functional linear and logistic regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antcc/rk-bfr
project_urls =
    Bug Tracker = https://github.com/antcc/rk-bfr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
